added light/dark mode

--- a/blog.html
+++ b/blog.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,26 +8,32 @@
     <link rel="stylesheet" href="assets/css/blog.css">
     <title></Blog-Entries></title>
 </head>
+
 <body>
- <header class="main-header">
-        <button onclick="myFunction()">Toggle dark mode</button>
+
+    <header class="blog-header">
+        <h4>My First Blog</h4>
+        <a href="#" class="back">Back</a>
+        <button onclick="myFunction()">☀️</h1></button>
     </header>
 
     <main>
         <section>
-            <div class="work-container">
-            </div>
+
         </section>
 
     </main>
 
+    <footer>
+
+    </footer>
 
 
-    <script>
-        function myFunction() {
-            var element = document.body;
-            element.classList.toggle("dark-mode");
-        }
-    </script>   
+
+    <script src="./assets/js/logic.js"></script>
+    <script src="./assets/js/blog.js"></script>
+
+    </script>
 </body>
+
 </html>
