--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <header class="main-header">
-    <button id="darkToggle">☀️</h1>
+    <button onclick="myFunction()">☀️</h1></button>
   </header>
 
   <main>
