back button functional

--- a/blog.html
+++ b/blog.html
@@ -9,23 +9,26 @@
     <title></Blog-Entries></title>
 </head>
 
-<body>
-
+<body id="light">
     <header class="blog-header">
-        <h4>My First Blog</h4>
-        <a href="#" class="back">Back</a>
-        <button onclick="myFunction()">☀️</h1></button>
+        <h1>My First Blog</h1>
+        <button id="back">Back</button>
+        <button id="theme">☀️</h1></button>
     </header>
 
-    <main>
-        <section>
-
-        </section>
-
+    <main class="blog-container">
+        <div class="blog-post>
+            <div class="blog-title">Title: Another Blog Post Title</div>
+        <div class="blog-content">Content: Another blog post content goes here. Sed ut perspiciatis unde omnis iste
+            natus error sit voluptatem accusantium doloremque laudantium.</div>
+        <div class="blog-author">Author: </div>
+        </div>
     </main>
 
-    <footer>
-
+    <footer class="footer">
+        <div>
+            <a href="https://github.com/godfrk85" alt="Portfolio"> My Portfolio</a>
+        </div>
     </footer>
 
 
