updated have errors

--- a/blog.html
+++ b/blog.html
@@ -6,21 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/styles.css" />
     <link rel="stylesheet" href="assets/css/blog.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title></Blog-Entries></title>
 </head>
 
 <body id="light">
     <header class="blog-header">
         <h1>My First Blog</h1>
-        <button id="back">Back</button>
-        <button id="theme">☀️</h1></button>
+        <nav>
+            <i style="font-size:24px" class="fa">&#xf0a8;</i>
+            <button onclick="myFunction()">☀️</h1></button>
+        </nav>
     </header>
 
     <main class="blog-container">
         <div class="blog-post>
-            <div class="blog-title">Title: Another Blog Post Title</div>
-        <div class="blog-content">Content: Another blog post content goes here. Sed ut perspiciatis unde omnis iste
-            natus error sit voluptatem accusantium doloremque laudantium.</div>
+        <div class="blog-title">Title: Another Blog Post Title</div>
+        <div class="blog-content">Content: Another blog post content goes here. </div>
         <div class="blog-author">Author: </div>
         </div>
     </main>
