corected light dark theme

--- a/blog.html
+++ b/blog.html
@@ -10,22 +10,19 @@
     <title></Blog-Entries></title>
 </head>
 
-<body id="light">
+<body class="light">
     <header class="blog-header">
         <h1>My First Blog</h1>
-        <nav>
-            <i style="font-size:24px" class="fa">&#xf0a8;</i>
-            <button onclick="myFunction()">☀️</h1></button>
-        </nav>
+        <section class="btns-section">
+            <button id="backBtn" class="btns">&#128281;</button>
+            <a id="formLink" href="./index.html"></a>
+            <button type="checkbox" id="theme-switcher" class="btns">&#9728;</button>
+          </section> 
     </header>
+    
+    <section id="entries">
 
-    <main class="blog-container">
-        <div class="blog-post>
-        <div class="blog-title">Title: Another Blog Post Title</div>
-        <div class="blog-content">Content: Another blog post content goes here. </div>
-        <div class="blog-author">Author: </div>
-        </div>
-    </main>
+    </section>
 
     <footer class="footer">
         <div>
@@ -37,8 +34,7 @@
 
     <script src="./assets/js/logic.js"></script>
     <script src="./assets/js/blog.js"></script>
-
-    </script>
+    <script src="https://kit.fontawesome.com/ce7e1cc3b0.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
