--- a/index.html
+++ b/index.html
@@ -9,14 +9,11 @@
   <title></My-First-Blog></title>
 </head>
 
-<body id="light">
+<body class="light">
 
   <header class="main-header">
     <h1>My First Blog</h1>
-    <nav>
-      <button onclick="myFunction()">☀️</h1></button>
-
-    </nav>
+    <button type="checkbox" id="theme-switcher" class="btns">&#9728;</button>
   </header>
 
   <main>
@@ -29,12 +26,12 @@
       <div>
         <h3>What's on your mind?</h3>
         <form>
-          <label for="Username">Username:</label><br>
-          <input type="text" id="Username" name="Username"><br>          
-          <label for="Title">Title:</label><br>
-          <input type="text" id="Title" name="Title">         
-          <label for="Content">Content:</label><br>
-          <textarea name="Content" id="Content"></textarea>          
+          <label for="username">Username:</label><br>
+          <input type="text" id="username" name="username"><br>          
+          <label for="title">Title:</label><br>
+          <input type="text" id="title" name="title">         
+          <label for="content">Content:</label><br>
+          <textarea name="content" id="content"></textarea>          
           <button type="submit">Submit</button>
         </form>
       </div>
