fixed event listner and added error handling

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
           <textarea name="content" id="content"></textarea>          
           <button type="submit">Submit</button>
         </form>
+        <p id="error"></p>
       </div>
     </section>
 
